# FMC-estimator

./: README.md  SDFSRPQSXGMZD4BWP130HPNPN3P48CPD_partial.spi  cell_arc_pt.csv  fmc2.csh  mc_sim.sp  pyproject.toml
docs/: parser_spec.md
docs/superpowers/plans/: 2026-05-12-phase-1-parser-foundation.md
src/fmc_estimator/: __init__.py  cell_arc.py  cli.py  fmc_command.py  fmc_log.py  manifest.py  schema.py  spice.py
tests/: test_cell_arc.py  test_cli.py  test_fmc_command.py  test_fmc_log.py  test_manifest.py  test_schema.py  test_spice.py
